hopsworks-ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hopsworks-ingress
  namespace: hopsworks
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: hopsworks.ai.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hopsworks
            port:
              number: 8182
